---------------------------------------------------------------------------
Version 3.12.4 (rgerhards), 2008-03-??
---------------------------------------------------------------------------
Version 3.12.3 (rgerhards), 2008-03-18
- added advanced flow control for congestion cases (mode depending on message
  source and its capablity to be delayed without bad side effects)
- bugfix: $ModDir should not be reset on $ResetConfig - this can cause a lot
  of confusion and there is no real good reason to do so. Also conflicts with
  the new -M option and environment setting.
- bugfix: TCP and GSSAPI framing mode variable was uninitialized, leading to
  wrong framing (caused, among others, interop problems)
- bugfix: TCP (and GSSAPI) octet-counted frame did not work correctly in all
  situations. If the header was split across two packet reads, it was invalidly
  processed, causing loss or modification of messages.
- bugfix: memory leak in imfile
- bugfix: duplicate public symbol in omfwd and omgssapi could lead to
  segfault. thanks to varmojfekoj for the patch.
- bugfix: rsyslogd aborted on sigup - thanks to varmojfekoj for the patch
- some more internal cleanup ;)
- begun relp modules, but these are not functional yet
---------------------------------------------------------------------------
Version 3.12.2 (rgerhards), 2008-03-13
- added RSYSLOGD_MODDIR environment variable
- added -M rsyslogd option (allows to specify module directory location)
- converted net.c into a loadable library plugin
- bugfix: debug module now survives unload of loadable module when
  printing out function call data
- bugfix: not properly initialized data could cause several segfaults if
  there were errors in the config file - thanks to varmojfekoj for the patch
- bugfix: rsyslogd segfaulted when imfile read an empty line - thanks
  to Johnny Tan for an excellent bug report
- implemented dynamic module unload capability (not visible to end user)
- some more internal cleanup