@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------
 Version 3.12.4 (rgerhards), 2008-03-??
+- added flow control options to other input sources
+- bugfix/doc: removed no longer supported -h option from man page
 ---------------------------------------------------------------------------
 Version 3.12.3 (rgerhards), 2008-03-18
 - added advanced flow control for congestion cases (mode depending on message
